--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,11 @@
     padding: 0px;
     margin: 0px;
 }
+
+.App nav > a {
+    margin: 0.5rem;
+    padding-top: 0.5rem;
+    color: green;
+    text-decoration: none;
+    font-size: 1.2rem;
+}
